Static sidebar; Updated header

--- a/index.html
+++ b/index.html
@@ -1217,7 +1217,7 @@ a:visited,
                         
                     </main>
                 </div>
-                <aside id="js_sidebar" class="widget-area" itemscope itemtype="http://schema.org/WPSideBar">
+                <aside id="js_sidebar" class="widget-area" style="height: 100%!important;" itemscope itemtype="http://schema.org/WPSideBar">
                     <div class="sticky-sidebar js-sticky-sidebar">
                         <div id="wpshop_widget_articles-9" class="widget widget_wpshop_widget_articles">
                             <div class="widget-header">Δημοσιεύθηκε πρόσφατα</div>
